--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 This git repository is the implementation of the project in database for 3rd year in computer science.
+
+------
+Part 1
+------
+WebSite: https://erdplus.com/#/
+connect with google
